==> naranavi/Myoelectric-potential-adapter-for-electric-wheelchairs-for-people-with-severe-disabilities/sorc/EMG_AMP_D22Kamehame2/ADS1292.c <==
#include <avr/io.h>
#include <util/delay.h>     /* for _delay_ms() */
#include <avr/interrupt.h>
#include <stdio.h>
#include <stdlib.h>
#include "ADS1x9x.h"
#include "integer.h"
#include "main.h"
#include "serialLed.h"
#include "softserial.h"
#define DELAY_COUNT 2
#define ADS_DDR 	DDRD	// 方向設定ポート
#define ADS_PORT	PORTD	// ポート
#define ADS_PORTB	PORTB	// ポート
#define ADS_PIN		PIND	// ポート
#define ADS_PINB	PINB	// ポート
#define ADS_RXD 	PORTD0	// SPI データ入力
#define ADS_TXD 	PORTD1	// SPI データ出力
#define ADS_XCK 	PORTD4	// SPI clock
#define ADS_CSN 	PORTD2	// ADS CS# セレクト
#define ADS_DRDY 	PORTB0	// ADS /DRDY
#define ADS_DRDY_INT PCINT0	// /DRDY割り込みポート
#define ADS_PCMSK	PCMSK0	// PCINT0 マスクレジスタ
#define ADS_PCIF	PCIF0	// ピン変化割り込み要求フラグ
#define	ADS_PCIE	PCIE0
#define ADS_START 	PORTD6	// ADS START
#define ADS_RESN 	PORTD7	// ADS RES# リセット
#define ADS_CS_ON	ADS_PORT &=~(1<<ADS_CSN)	// ADS 選択
#define ADS_CS_OFF	ADS_PORT |=(1<<ADS_CSN)		// ADS 非選択
#define ADS_RES_ON	ADS_PORT &=~(1<<ADS_RESN)	// ADS RESET実行
#define ADS_RES_OFF	ADS_PORT |=(1<<ADS_RESN)	// ADS REST解除
#define ADS_DRDY_UP	ADS_PORTB |=(1<<ADS_DRDY)	// ADS DRDY プルアップ
#define ads_drdy	(~ADS_PINB & (1<<ADS_DRDY))		// 変換済みデータがあるかテスト
#define ADS_START_ON	ADS_PORT |=(1<<ADS_START)	// ADS連続開始ハード司令
#define ADS_START_OFF	ADS_PORT &=~(1<<ADS_START)	// ADS連続停止ハード司令
#define ADS_TXD_ON	ADS_PORT |=(1<<ADS_TXD)		// ADS TX Hi
#define ADS_TXD_OFF	ADS_PORT &=~(1<<ADS_TXD)	// ADS TX Low
#define ADS_XCK_ON	ADS_PORT |=(1<<ADS_XCK)		// ADS CK Hi

void ADS1x9x_Reset(void)
  {
	    ADS_RES_OFF;					// Set High
	    /* Provide suficient dealy*/
	    _delay_ms(1);						// Wait 1 mSec
	    ADS_RES_ON;						// Set to low
	    _delay_ms(1);						// Wait 1 mSec
	    ADS_RES_OFF;					// Set High
	    _delay_ms(7);						// Wait 7 mSec
    }

void ADS1x9x_Disable_Start(void)
{
    ADS_CS_ON;				// Set to LOW
	_delay_ms(7);			// Wait 7 mSec
}

void ADS1x9x_Enable_Start(void)
{
    ADS_CS_OFF;				// Set to High
	_delay_ms(100);			// Wait 10 mSec
}

void Clear_ADS1x9x_Chip_Enable (void)
  {
  	
  	_delay_us(2);	// 1.5uS (at 1MHz)
	/* ADS1x9x CS is Active low*/
	ADS_CS_OFF;		// Set to High
  }

void ADS1x9x_SPI_Command_Data(unsigned char Data)
{
	unsigned char delayVar;
//	Set_ADS1x9x_Chip_Enable();
//	for (delayVar = 0; delayVar < 50; delayVar++);
//	Clear_ADS1x9x_Chip_Enable();

	Set_ADS1x9x_Chip_Enable();
	
	UDR0 = Data;                                     // Send the data sitting at the pointer DATA to the TX Buffer
 	while ( !(UCSR0A & (1<<RXC0)) );

	delayVar = UDR0;

	for (delayVar = 0; delayVar < 150; delayVar++);

	Clear_ADS1x9x_Chip_Enable();

}

void ADS1x9x_Reg_Write (unsigned char READ_WRITE_ADDRESS, unsigned char DATA)
  { 
  	short i;
  	switch (READ_WRITE_ADDRESS)
  	{
  		case 1:
  			DATA = DATA & 0x87;
  		break;
  		case 2:
  			DATA = DATA & 0xFB;
  			DATA |= 0x80;
  			
  		break;
  		case 3:
  			DATA = DATA & 0xFD;
  			DATA |= 0x10;
  			
  		break;
  		case 7:
  			DATA = DATA & 0x3F;
  		break;
  		case 8:
  			DATA = DATA & 0x5F;
  		break;
  		case 9:
  			DATA |= 0x02;
  		break;
  		case 10:
  			DATA = DATA & 0x87;
  			DATA |= 0x01;
  		break;
  		case 11:
  			DATA = DATA & 0x0F;
  		break;
  		
  		default:
  		
  		break;
  		
  	}
	SPI_Tx_buf[0] = READ_WRITE_ADDRESS | WREG;
	SPI_Tx_buf[1] = 0;						// Write Single byte
	SPI_Tx_buf[2] = DATA;					// Write Single byte
	Set_ADS1x9x_Chip_Enable();
	
	for ( i =0; i < 50;i++);

	UDR0 = SPI_Tx_buf[0];              // Send the first data to the TX Buffer
 	while ( !(UCSR0A & (1<<RXC0)) );			// USCI_B0 TX buffer ready?
	i = UDR0;							// Read Rx buf

	UDR0 = SPI_Tx_buf[1];              // Send the first data to the TX Buffer
	while ( !(UCSR0A & (1<<RXC0)) );			// USCI_B0 TX buffer ready?
	i = UDR0;
	UDR0 = SPI_Tx_buf[2];              // Send the first data to the TX Buffer
	while ( !(UCSR0A & (1<<RXC0)) );			// USCI_B0 TX buffer ready?
	i = UDR0;

  }

  unsigned char ADS1x9x_Reg_Read(unsigned char Reg_address)
  {
  		unsigned char retVal;
		SPI_Tx_buf[0] = Reg_address | RREG;
		SPI_Tx_buf[1] = 0;							// Read number of bytes - 1
		
		Set_ADS1x9x_Chip_Enable();					// Set chip select to low
		
		UDR0 = SPI_Tx_buf[0];                  // Send the first data to the TX Buffer
		while ( !(UCSR0A & (1<<RXC0)) );				// USCI_B0 TX buffer ready?
		UDR0 = SPI_Tx_buf[1];                  // Send the first data to the TX Buffer
		while ( !(UCSR0A & (1<<RXC0)) );				// USCI_B0 TX buffer ready?
		retVal = UDR0;							// Read RX buff
		UDR0 = 0x00;                           // Send the first data to the TX Buffer
		while ( !(UCSR0A & (1<<RXC0)) );				// USCI_B0 TX buffer ready?
		retVal = UDR0;							// Read RX buff

		Clear_ADS1x9x_Chip_Enable();				// Disable chip select
		_delay_us(4);
		return 	retVal;
  }

void ADS1x9x_PowerOn_Init(void)
{
#define P PWM_MAX/100



   WORD d1,d2;

	d1=d2=0;


   Init_ADS1x9x_Resource();		// MPUのSPI & i/o設定
   _delay_ms(40);

   ADS1x9x_Reset();				// ADC reset

   //Init_ADS1x9x_DRDY_Interrupt();
  sled_ini();

    _delay_ms(2);


//   Hard_Stop_ADS1x9x();

	 Wake_Up_ADS1x9x ();			// SPI_Command_Data (WAKEUP);
   
   Start_Data_Conv_Command();		// start command
   

   Soft_Stop_ADS1x9x();				// stop command


   _delay_ms(2);


   	Stop_Read_Data_Continuous();					// SDATAC command(Stop Read Data Continuously mode)

 	 _delay_ms(2);

	ADS1x9x_Default_Reg_Init();				// レジスター初期値設定

//	Calib_Run();							// 	キャリブレーション


	Start_Read_Data_Continuous();			// 連続変換

 	
	//ADS1292_24BIT:
	SPI_Rx_exp_Count=9;		// 3 byte status + 3 bytes ch1 data + 3 bytes CH0 data
	ADS_CS_OFF;

	Soft_Start_ADS1x9x ();					// start
	// 受信開始
	Enable_ADS1x9x_DRDY_Interrupt();

	sei();


	for(;;){
		
		pwm_A(0);
		pwm_B(0);

		sdisp = OFFG;
		while(swin==0);
		//new ON
		sdisp = STARTG;
		_deley_ms(20);
		while(swin);
		timer = 0;
		power =0;
		sdisp = LEVELG;

		pwm_A(LOW_LEVEL);
		pwm_B(LOW_LEVEL);
		
		// ピーク検出
		while (timer < 3000/2){
			if (peek < ch_A){
				peek = ch_A;
			}
			while(val_flag==0);
			val_flag=0;
		}

		//発射待ち
		while (peek/2 > ch_A){
			while(val_flag==0);
			val_flag=0;
			if (timer > 10000/2){
				// 10秒を超えると児童発射
				break;
			}
		}
		
		sdisp = FULLG;
		
		a = power
		pwm_A(ch_A);
		pwm_B(ch_B);




//		LED_RED_ON;
		while(val_flag==0);
		val_flag=0;
		pwm_A(ch_A);
		pwm_B(ch_B);

		if ((stat1 & (1<<0)) + (stat2 & 1<<7)){
			// 電極外れ 点滅
			if(timer1 & 0x20){
				LED_LEFT_ON;
			}else{
				LED_LEFT_OFF;
			}
		}else{
			LED_LEFT_PWM = ch_A;
		}

		if (stat1 & (1<<2|1<<1)){
			// 電極外れ 点滅
			if(timer1 & 0x20){
				LED_RIGHT_ON;
			}else{
				LED_RIGHT_OFF;
			}
		}else{
			LED_RIGHT_PWM = ch_B;
		}


	}

	for(;;){

   ADS1x9x_Read_All_Regs(ADS1x9xRegVal);

  _delay_ms(8);

	}

   ADS1x9x_Default_Reg_Init();
   ADS1x9x_Read_All_Regs(ADS1x9xRegVal);

	//LED_RED_ON;
    for(;;);
	
}
