==> hina3271/nrf-acc-ecg/nrf52-SDK/NRF_project/pca10040/blank/ADS1292/ADS1292.c <==
#include "nrf_drv_spi.h"
#include "app_util_platform.h"
#include "nrf_gpio.h"
#include "nrf_delay.h"
#include "nrf_drv_gpiote.h"
#include "boards.h"
#include "app_error.h"
#include <string.h>
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#include "ADS1292_main.h"
#include "ADS1292.h"
#define DELAY_COUNT 2
#define SPI_INSTANCE  0 /**< SPI instance index. */
#define TEST_STRING "Nordic"

void ADS1x9x_Reset(void)    //P8out = reset pin (maybe)
{
    unsigned short i;
    
    nrf_gpio_pin_set(ADS_RST_PIN);   //by yonghun 2020 06/15
    //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High     //declare port: no declare
    /* Provide suficient dealy*/
    for(i= 0;	i < 5000; i++);						// Wait 1 mSec
    
    nrf_gpio_pin_clear(ADS_RST_PIN);
    //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_RESET;	// Set to low  
    for(i= 0;	i < 5000; i++);					    // Wait 1 mSec
  
    nrf_gpio_pin_set(ADS_RST_PIN);
    //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_RESET;		// Set High
    for(i= 0;	i < 35000; i++);

}

void ADS1x9x_Disable_Start(void)      //P8out = reset pin (maybe) I don't know where declare
{
    unsigned short i;
    
    nrf_gpio_pin_write(ADS_START_PIN, 0);   //by yonghun 2020 06/15
    //P8OUT &= ~(enum PORT8_ADC_CONTROL)ADC_START;	// Set to LOW
    for(i=0; i<35000; i++);        					// Small Delay to settle   
}

void ADS1x9x_Enable_Start(void)
{
    unsigned short i;
   
    nrf_gpio_pin_write(ADS_START_PIN, 1);   //by yonghun 2020 06/15
    //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_START;		// Set to High
    for(i=0; i<50000; i++);        					// Small Delay to settle   
}

void Clear_ADS1x9x_Chip_Enable (void)       //high -> noe yet select
{
    unsigned char CsDelay;
    for ( CsDelay = 0;  CsDelay < 100 ;CsDelay++);
    /* ADS1x9x CS is Active low*/
    //P8OUT |= (enum PORT8_ADC_CONTROL)ADC_CS;		// Set to High

    nrf_gpio_pin_write(ADS_CSN_PIN, 1);   //by yonghun 2020 06/15
}

void ADS1x9x_SPI_Command_Data(unsigned char Data)         //problem in here we can change this function
{
    unsigned char delayVar;
    Set_ADS1x9x_Chip_Enable();    //cs low
    for (delayVar = 0; delayVar < 50; delayVar++);
    Clear_ADS1x9x_Chip_Enable();    //cs high
    Set_ADS1x9x_Chip_Enable();    //cs low


    memset(SPI_Tx_buf, 0, 3);
    memset(SPI_Rx_buf, 0, 9);

    spi_xfer_done = false;
    SPI_Tx_buf[0] = Data;
    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, SPI_Tx_buf, 1, SPI_Rx_buf, 0));
    
    
    while (!spi_xfer_done);
    
	
    //UCB0TXBUF = Data;                                     // Send the data sitting at the pointer DATA to the TX Buffer   //spi communication
    //while ( (UCB0STAT & UCBUSY) );

    //delayVar = UCB0RXBUF;
    //delayVar = SPI_Rx_buf;      //something delay proble in here
    Clear_ADS1x9x_Chip_Enable();    //cs high

    for (delayVar = 0; delayVar < 150; delayVar++);

}

void ADS1x9x_Reg_Write (unsigned char READ_WRITE_ADDRESS, unsigned char DATA)
{ 
    short i;
    switch (READ_WRITE_ADDRESS)
    {
        case 1:             //what mean "case 1" 2020 06/13 yonghun
            DATA = DATA & 0x87;
            break;

        case 2:
            DATA = DATA & 0xFB;
            DATA |= 0x80;	
            break;

        case 3:
            DATA = DATA & 0xFD;
            DATA |= 0x10;
            break;

        case 7:
            DATA = DATA & 0x3F;
            break;

        case 8:
            DATA = DATA & 0x5F;
            break;

        case 9:
            DATA |= 0x02;
            break;

        case 10:
            DATA = DATA & 0x87;
            DATA |= 0x01;
            break;

        case 11:
            DATA = DATA & 0x0F;
            break;
  		
        default:
            break;
  		
    }
    //define DATA value
    memset(SPI_Tx_buf, 0, 3);
    memset(SPI_Rx_buf, 0, 9);
    spi_xfer_done = false;

    SPI_Tx_buf[0] = READ_WRITE_ADDRESS | 0x40;        //SPI_Tx_buf -> 1byte, 10 array  //WREG=write to register
    SPI_Tx_buf[1] = 0;						// Write Single byte
    SPI_Tx_buf[2] = DATA;					// Write Single byte

    Set_ADS1x9x_Chip_Enable();
	
    for ( i =0; i < 50;i++);        //to delay
        /*
	UCB0TXBUF = SPI_Tx_buf[0];              // Send the first data to the TX Buffer
 	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;							// Read Rx buf

	UCB0TXBUF = SPI_Tx_buf[1];              // Send the first data to the TX Buffer
	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;
	UCB0TXBUF = SPI_Tx_buf[2];              // Send the first data to the TX Buffer
	while ( (UCB0STAT & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCB0RXBUF;
        */
    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, SPI_Tx_buf, 3, SPI_Rx_buf, 0));

    while (!spi_xfer_done);


        //must check UCB0RXBUF 2020 06/13 yonghun
}

unsigned char ADS1x9x_Reg_Read(unsigned char Reg_address)
{
    unsigned char retVal;
    memset(SPI_Tx_buf, 0, 3);
    memset(SPI_Rx_buf, 0, 9);
    spi_xfer_done = false;
    SPI_Tx_buf[0] = 0x20 | Reg_address;               //SPI_Tx_buf -> 1byte, 10 array  //WREG=write to register
    SPI_Tx_buf[1] = 0x01;							// Read number of bytes - 1
		
    Set_ADS1x9x_Chip_Enable();					// Set chip select to low

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&spi, SPI_Tx_buf, 3, SPI_Rx_buf, 3));
    while (!spi_xfer_done);

		/*
		UCB0TXBUF = SPI_Tx_buf[0];                  // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		UCB0TXBUF = SPI_Tx_buf[1];                  // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		retVal = UCB0RXBUF;							// Read RX buff
		UCB0TXBUF = 0x00;                           // Send the first data to the TX Buffer
		while ( (UCB0STAT & UCBUSY) );				// USCI_B0 TX buffer ready?
		retVal = UCB0RXBUF;							// Read RX buff
                */
    
    retVal = SPI_Rx_buf[2];

    return retVal;
                        //must check UCB0RXBUF 2020 06/13 yonghun
}

void ADS1x9x_PowerOn_Init(void)
{
    Init_ADS1x9x_Resource();      //setting SPI
    printf("\r\nSPI example started.\n\r");

    volatile unsigned short Init_i, j;

    ADS1x9x_Reset();                  //reset pin high state

    for (j = 0; j < DELAY_COUNT; j++)         //DELAY_COUNT = 2
    {
        for ( Init_i =0; Init_i < 20000; Init_i++);
        for ( Init_i =0; Init_i < 20000; Init_i++);
        for ( Init_i =0; Init_i < 20000; Init_i++);
    }       //delay
   //Init_ADS1x9x_DRDY_Interrupt();

   //ADS1x9x_Clock_Select(1);		// Set internal clock   //yonghun  2020 06/15 erase

    for ( Init_i =0; Init_i < 20000; Init_i++);    //delay
    for ( Init_i =0; Init_i < 20000; Init_i++);    //delay
    for ( Init_i =0; Init_i < 20000; Init_i++);    //delay
    //ADS1x9x_Disable_Start();        //start pin 0 state
    //ADS1x9x_Enable_Start();         //start pin 1 state

    //Hard_Stop_ADS1x9x();            //start pin 0 state
   
    //Start_Data_Conv_Command();      //start by command
    //printf("\r\n1_2\r\n");
   
    //Soft_Stop_ADS1x9x();            //stop by command
    //nrf_delay_ms(100);
    //printf("\r\n1_2_1\r\n");
    
    /*
    for (j = 0; j < DELAY_COUNT; j++)
    {
        for ( Init_i =0; Init_i < 20000; Init_i++);
    }
    */
    


    //for ( Init_i =0; Init_i < 40000; Init_i++);   //error in here

    Stop_Read_Data_Continuous();					// SDATAC command
    nrf_delay_ms(100);

    /*
    for (j = 0; j < DELAY_COUNT; j++)
    {
        for ( Init_i =0; Init_i < 35000; Init_i++);
    }
    for (j = 0; j < DELAY_COUNT; j++)
    {
        for ( Init_i =0; Init_i < 35000; Init_i++);
    }
    */

    //nrf_delay_ms(20);

    //ADS1x9x_Enable_Start();         //start pin 1 state   //put by yonghun  2020 06/15

//erase by yh 2020 06/17
    //Asserts start bit
    //ADS1x9x_SPI_Command_Data(COMMAND_START);
    //nrf_delay_ms(2000);

    //Start Read data Continouously
    //ADS1x9x_SPI_Command_Data(COMMAND_RDATAC);
    //nrf_delay_ms(2000);

    //ADS1x9x_SPI_Command_Data(COMMAND_OFFSETCAL);
    //printf("\r\nRunning...\n\r");


    //printf("\r\n1_3_2\r\n");
    //ADS1x9x_Read_All_Regs(ADS1x9xRegVal);
    //ADS1x9x_Default_Reg_Init();
    //ADS1x9x_Read_All_Regs(ADS1x9xRegVal);
    //printf("\r\n1_4\r\n");



}
